# CS421

./: .gitignore  welcome.md
activities/a02-hydra/: README.md  a02-hydra.cabal
activities/a02-hydra/app/: Main.hs
activities/a02-hydra/src/: Lib.hs
activities/a02-hydra/test/: Spec.hs
activities/a03-fix/: a03-fix.cabal
activities/a03-fix/src/: Lib.hs
activities/a03-fix/test/: Spec.hs
activities/a04-mylist/: README.md  a04-mylist.cabal
activities/a04-mylist/src/: Lib.hs
activities/a04-mylist/test/: Spec.hs
activities/a09-cps/: a09-cps.cabal
activities/a09-cps/app/: Main.hs
activities/a09-cps/src/: Lib.hs
activities/a09-cps/test/: Spec.hs
activities/ll-activity/: TAGS  code.cabal
activities/ll-activity-2/: code.cabal
activities/ll-activity-2/src/: Lib.hs
activities/ll-activity-2/test/: Spec.hs
activities/ll-activity/app/: Main.hs
activities/monad-activity/: README.md  monad-activity.cabal
activities/monad-activity/app/: Main.hs
activities/monad-activity/src/: Lib.hs
activities/monad-activity/test/: Spec.hs
grade-reports/: a02-hydra.txt  a03-fix.txt  a04-mylist.txt  a09-cps.txt  cutoffs.txt  grade-report.txt  ll-activity-2.txt  monad-activity.txt  mp1-haskell.txt  mp2-interpreter.txt  mp3-cps.txt  mp4-forth-late.txt  mp4-forth.txt  mp5-parser-late.txt  mp5-parser.txt  mp6-scheme.txt  sak2_ml2_report.txt  sak2_ml3_report.txt  sak2_ml4_report.txt  sak2_ml5_report.txt
grade-reports/midterm-1/: code-hs-adtConsList-list2cons_sumCons.txt  code-hs-cps-sqr.txt  code-hs-functorWrite-02.txt  code-hs-hofUse-doubleEvens.txt  code-hs-hofWrite-foldl.txt  code-hs-recursionList-sumlist.txt  code-hs-recursionTail-maxList.txt
grade-reports/midterm-2/: code-hs-monad-write-06.txt
mps/mp1-haskell/: README.md  mp1-haskell.cabal
mps/mp1-haskell/app/: Main.hs
mps/mp1-haskell/test/: Spec.hs  Tests.hs
mps/mp2-interpreter/: README.md  mp2-interpreter.cabal
mps/mp2-interpreter/app/: .Main.hs.swo  .Main.hs.swp  Main.hs
mps/mp2-interpreter/test/: Tests.hs
mps/mp3-cps/: .gitignore  README.md  mp3-cps.cabal
mps/mp3-cps/app/: .Main.hs.swn  Main.hs
mps/mp3-cps/test/: Tests.hs
mps/mp4-forth/: README.md  mp4-forth.cabal
mps/mp4-forth/app/: Main.hs
mps/mp4-forth/test/: Spec.hs  Tests.hs
mps/mp5-parser/: mp5-parser.cabal
mps/mp5-parser/app/: Main.hs
mps/mp5-parser/solution/: Lib.hs
mps/mp5-parser/src/: Lib.hs
mps/mp5-parser/test/: Spec.hs
mps/mp6-scheme/: .gitignore  README.md  mp6-scheme.cabal
mps/mp6-scheme/app/: Main.hs
mps/mp6-scheme/app/Scheme/: Core.hs  Eval.hs  Parse.hs  Runtime.hs
mps/mp6-scheme/soln_bin/: .gitignore  mp6ref  mp6ref_readme.txt
mps/mp6-scheme/test/: Spec.hs  Tests.hs
samples/interpreters-1/: README.md
samples/interpreters-1/i1/app/: Main.hs
samples/interpreters-1/i2/app/: Main.hs
samples/interpreters-1/i3/: i1.cabal
samples/interpreters-1/i3/app/: Main.hs
