name:                mp1-haskell
version:             0.1.0.0
synopsis:            Ensure you know some basic Haskell
license:             NCSA
build-type:          Simple
cabal-version:       >=1.10

executable main
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base
    default-language:   Haskell2010

test-suite test
    type:               exitcode-stdio-1.0
    other-modules:      Main , Tests
    hs-source-dirs:     app , test
    main-is:            Spec.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -main-is Spec.main
    build-depends:      base
    default-language:   Haskell2010
