name:                mp3-cps
version:             0.1.0.0
synopsis:            Write a CPS Transform
license:             NCSA
build-type:          Simple
cabal-version:       >=1.10

executable main
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base , unordered-containers >= 0.2 , parsec
    default-language:   Haskell2010

test-suite test
    type:               exitcode-stdio-1.0
    other-modules:      Main , Spec , Tests
    hs-source-dirs:     app , test
    main-is:            Spec.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -main-is Spec.main
    build-depends:      base , unordered-containers >= 0.2 , parsec
    default-language:   Haskell2010

