name:                i1
version:             0.1.0.0
synopsis:            Very small example interpreter, version 1
description:         Please see README.md
homepage:            
license:             BSD3
license-file:        LICENSE
author:              Mattox Beckman
maintainer:          mattox@illinois.edu
copyright:           2017 Mattox Beckman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable i1-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , i1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/i1
